--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,6 +21,9 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+      - name: Deps
+        run: |
+          helm dependency update charts/ftl
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         env:
