--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,9 +21,10 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-      - name: Deps
+      - name: repos
         run: |
-          helm dependency update charts/ftl
+          helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo add https://helm.goharbor.io
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         env:
