--- a/charts/ftl/Chart.yaml
+++ b/charts/ftl/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: ftl-chart
+name: ftl
 description: |
   A Helm chart for Kubernetes that deploys FTL
 home: https://github.com/TBD54566975/ftl
