--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,7 +16,7 @@ jobs:
           repository: 'stuartwdouglas/ftl-charts'
           token: '${{ secrets.FTL_CHARTS_TOKEN }}'
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           path: .ftl
@@ -26,6 +26,8 @@ jobs:
           cp -r .ftl/charts/ charts/
       - name: Init Hermit
         uses: cashapp/activate-hermit@v1.1.3
+        with:
+          working-directory: .ftl
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
